--- a/parsing/.classpath
+++ b/parsing/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="json-simple/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="emoji-java/emoji-java-5.1.1.jar"/>
+	<classpathentry kind="lib" path="emoji-java/json-java/json-20210307.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
